setup for gh actions

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -7,7 +7,8 @@ enableGitInfo = true
 
 # additional settings
 googleAnalytics = "G-T85PPZ36GN"
-baseURL = "https://demo.gethinode.com/"
+#baseURL = "http://127.0.0.1:8080/"
+baseURL = "https://mjpritchard.github.io/my-hinode-site-hugo/"
 canonifyURLs = false
 enableEmoji = true
 enableRobotsTXT = true
