--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -8,7 +8,8 @@ enableGitInfo = true
 # additional settings
 googleAnalytics = "G-T85PPZ36GN"
 #baseURL = "http://127.0.0.1:8080/"
-baseURL = "https://mjpritchard.github.io/my-hinode-site-hugo/"
+baseURL = "/"
+relativeURLs = true
 canonifyURLs = false
 enableEmoji = true
 enableRobotsTXT = true
