--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -8,7 +8,7 @@ enableGitInfo = true
 # additional settings
 googleAnalytics = "G-T85PPZ36GN"
 #baseURL = "http://127.0.0.1:8080/"
-baseURL = "/"
+baseURL = ""
 relativeURLs = true
 canonifyURLs = false
 enableEmoji = true
