--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -11,21 +11,21 @@
         link = "about"
         caption = "About"
     [en.params.footer]
-        license = "Licensed under Creative Commons (<a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' class='link-secondary' target='_blank' rel='noopener noreferrer'>CC BY-NC-SA 4.0</a>)."
-        socialTitle = "Follow me"
-        socialCaption = "I work on everything coding and tweet developer memes"
+        license = "<br><a href='https://gethinode.com' class='link-secondary' target='_blank' rel='noopener noreferrer'>Hinode Theme</a> for <a href='https://gohugo.io/' class='link-secondary' target='_blank' rel='noopener noreferrer'>Hugo</a> Licensed under Creative Commons (<a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' class='link-secondary' target='_blank' rel='noopener noreferrer'>CC BY-NC-SA 4.0</a>)."
+        #socialTitle = "Follow me"
+        #socialCaption = "I work on everything coding and tweet developer memes"
 # toml-docs-end lang-param
 
-[nl]
-    languageName = "Nederlands"
-    contentDir = "content/nl"
-    weight = 2
-    [nl.params.head]
-        tagline = "Een Hugo Thema"
-    [nl.params.feature]
-        link = "over-mij"
-        caption = "Over mij"
-    [nl.params.footer]
-        license = "Gelicenseerd onder Creative Commons (<a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' class='link-secondary' target='_blank' rel='noopener noreferrer'>CC BY-NC-SA 4.0</a>)."
-        socialTitle = "Volg mij"
-        socialCaption = "Ik doe aan programmeren en tweet memes"
+#[nl]
+#    languageName = "Nederlands"
+#    contentDir = "content/nl"
+#    weight = 2
+#    [nl.params.head]
+#        tagline = "Een Hugo Thema"
+#    [nl.params.feature]
+#        link = "over-mij"
+#        caption = "Over mij"
+#    [nl.params.footer]
+#        license = "Gelicenseerd onder Creative Commons (<a href='https://creativecommons.org/licenses/by-nc-sa/4.0/' class='link-secondary' target='_blank' rel='noopener noreferrer'>CC BY-NC-SA 4.0</a>)."
+#        socialTitle = "Volg mij"
+#        socialCaption = "Ik doe aan programmeren en tweet memes"
