--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -9,7 +9,7 @@ enableGitInfo = true
 #googleAnalytics = "G-T85PPZ36GN"
 #baseURL = "http://127.0.0.1:8080/"
 #baseURL = "/"
-baseURL = ""
+baseURL = "https://mjpritchard.github.io/my-hinode-site-hugo/"
 canonifyURLs = false
 enableEmoji = true
 enableRobotsTXT = true
