change lang setting

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -26,7 +26,7 @@ timeout = "180s"
 # toml-docs-start language
 languageCode = "en-us"
 defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = true
+defaultContentLanguageInSubdir = false
 # toml-docs-end language
 
 # toml-docs-start redirect
