try canonify urls & orig baseurl

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -9,8 +9,8 @@ enableGitInfo = true
 #googleAnalytics = "G-T85PPZ36GN"
 #baseURL = "http://127.0.0.1:8080/"
 #baseURL = "/"
-baseURL = "/"
-canonifyURLs = false
+baseURL = "https://mjpritchard.github.io/my-hinode-site-hugo/"
+canonifyURLs = true
 enableEmoji = true
 enableRobotsTXT = true
 enableInlineShortcodes = true
