--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -10,7 +10,8 @@ enableGitInfo = true
 #baseURL = "http://127.0.0.1:8080/"
 #baseURL = "/"
 baseURL = "https://mjpritchard.github.io/my-hinode-site-hugo/"
-canonifyURLs = true
+canonifyURLs = false
+relativeURLs = true
 enableEmoji = true
 enableRobotsTXT = true
 enableInlineShortcodes = true
